# OOGL

./: CMakeLists.txt  README.md  cmake_config.h.in
benchmarks/: CMakeLists.txt  benchmark.cpp  config.h  mandelbrot.h  utility.cpp  utility.h
benchmarks/shaders/: benchmark.fragmentshader  benchmark.vertexshader
source/: CMakeLists.txt  buffer.cpp  buffer.h  buffer.tpp  model.cpp  model.h  model.tpp  polygons.h  render_context.cpp  render_context.h  render_context.tpp  shader.cpp  shader.h  shader.tpp  text.cpp  text.h  utility.h
tests/: CMakeLists.txt  main.cpp  test_buffer.h  test_vao.h  tests.cpp
tests/shaders/: fragment.fragmentshader  text.fragmentshader  text.vertexshader  vertex.vertexshader
